Bug 596496 - IsTooLong shouldn't compare maxlength and text length if maxlength isn't set. r=bz a=blocking2.0