content/html/content/src/nsHTMLInputElement.cpp
@@ -3711,17 +3711,23 @@ nsHTMLInputElement::SetCustomValidity(const nsAString& aError)
 PRBool
 nsHTMLInputElement::IsTooLong()
 {
-  if (!GET_BOOLBIT(mBitField, BF_VALUE_CHANGED)) {
+  if (!HasAttr(kNameSpaceID_None, nsGkAtoms::maxlength) ||
+      !GET_BOOLBIT(mBitField, BF_VALUE_CHANGED)) {
     return PR_FALSE;
   }
 
   PRInt32 maxLength = -1;
-  PRInt32 textLength = -1;
-
   GetMaxLength(&maxLength);
+
+  // Maxlength of -1 means parsing error.
+  if (maxLength == -1) {
+    return PR_FALSE;
+  }
+
+  PRInt32 textLength = -1;
   GetTextLength(&textLength);
 
-  return maxLength >= 0 && textLength > maxLength;
+  return textLength > maxLength;
 }
 
 PRBool
