content/html/content/src/nsHTMLTextAreaElement.cpp
@@ -1177,17 +1177,22 @@ nsHTMLTextAreaElement::SetCustomValidity(const nsAString& aError)
 PRBool
 nsHTMLTextAreaElement::IsTooLong()
 {
-  if (!mValueChanged) {
+  if (!HasAttr(kNameSpaceID_None, nsGkAtoms::maxlength) || !mValueChanged) {
     return PR_FALSE;
   }
 
   PRInt32 maxLength = -1;
-  PRInt32 textLength = -1;
-
   GetMaxLength(&maxLength);
+
+  // Maxlength of -1 means parsing error.
+  if (maxLength == -1) {
+    return PR_FALSE;
+  }
+
+  PRInt32 textLength = -1;
   GetTextLength(&textLength);
 
-  return maxLength >= 0 && textLength > maxLength;
+  return textLength > maxLength;
 }
 
 PRBool
